Refactor: update getting repo info
